--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
       <!-- الروابط -->
       <nav class="nav">
         <ul class="nav-links">
-          <li><a href="index.html">الرئيسية</a></li>
+          <li><a href="index.html" class="active">الرئيسية</a></li>
           <li><a href="aboutUs.html">من نحن</a></li>
-          <li><a href="Services.html" class="active">خدماتنا</a></li>
+          <li><a href="Services.html" >خدماتنا</a></li>
           <li><a href="Blogs.html">المدونة</a></li>
           <li><a href="FAQ.html">الأسئلة الشائعة</a></li>
           <li><a href="ContactUs.html">اتصل بنا</a></li>
@@ -235,7 +235,7 @@
 
         <!-- CTA -->
         <div class="founder-cta">
-          <a href="about.html" class="btn btn-outline">تعرف أكثر على مسيرة د. سليمان</a>
+          <a href="aboutus.html#founder" class="btn btn-outline">تعرف أكثر على مسيرة د. سليمان</a>
         </div>
 
         <!-- سوشيال ميديا -->
@@ -273,7 +273,7 @@
 
       <div class="services-grid">
         <!-- خدمة 1 -->
-        <a href="services/consulting.html" class="service-card">
+        <a href="ServiceEight.html" class="service-card">
           <div class="service-image">
             <img src="img/IMG_2712.JPG" alt="الاستشارات القانونية في شركة د. سليمان المقحم" />
           </div>
@@ -285,7 +285,7 @@
         </a>
 
         <!-- خدمة 2 -->
-        <a href="services/litigation.html" class="service-card">
+        <a href="Serviceone.html" class="service-card">
           <div class="service-image">
             <img src="img/IMG_2774_ed.JPG" alt="التقاضي والمرافعات أمام المحاكم السعودية" />
           </div>
@@ -297,7 +297,7 @@
         </a>
 
         <!-- خدمة 3 -->
-        <a href="services/contracts.html" class="service-card">
+        <a href="servicenine.html" class="service-card">
           <div class="service-image">
             <img src="img/IMG_2726.JPG" alt="صياغة ومراجعة العقود والاتفاقيات" />
           </div>
@@ -309,7 +309,7 @@
         </a>
 
         <!-- خدمة 4 -->
-        <a href="services/companies.html" class="service-card">
+        <a href="serviceFive.html" class="service-card">
           <div class="service-image">
             <img src="img/IMG_2798_ed.JPG" alt="خدمات تأسيس الشركات والاستثمار" />
           </div>
@@ -321,7 +321,7 @@
         </a>
 
         <!-- خدمة 5 -->
-        <a href="services/notary.html" class="service-card">
+        <a href="serviceFour.html" class="service-card">
           <div class="service-image">
             <img src="img/IMG_2831_ed.JPG" alt="خدمات التوثيق والتصديق للوكالات والعقود" />
           </div>
@@ -633,5 +633,6 @@
   <!-- ====== SCRIPTS ====== -->
   <script src="script.js"></script>
 </body>
+
 
 </html>
