--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
         </a>
 
         <!-- خدمة 2 -->
-        <a href="Serviceone.html" class="service-card">
+        <a href="ServiceOne.html" class="service-card">
           <div class="service-image">
             <img src="img/IMG_2774_ed.JPG" alt="التقاضي والمرافعات أمام المحاكم السعودية" />
           </div>
@@ -297,7 +297,7 @@
         </a>
 
         <!-- خدمة 3 -->
-        <a href="servicenine.html" class="service-card">
+        <a href="ServiceFive.html" class="service-card">
           <div class="service-image">
             <img src="img/IMG_2726.JPG" alt="صياغة ومراجعة العقود والاتفاقيات" />
           </div>
@@ -309,7 +309,7 @@
         </a>
 
         <!-- خدمة 4 -->
-        <a href="serviceFive.html" class="service-card">
+        <a href="ServiceFour.html" class="service-card">
           <div class="service-image">
             <img src="img/IMG_2798_ed.JPG" alt="خدمات تأسيس الشركات والاستثمار" />
           </div>
@@ -636,3 +636,4 @@
 
 
 </html>
+
