--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
 
         <!-- CTA -->
         <div class="founder-cta">
-          <a href="aboutus.html#founder" class="btn btn-outline">تعرف أكثر على مسيرة د. سليمان</a>
+          <a href="aboutUs.html#founder" class="btn btn-outline">تعرف أكثر على مسيرة د. سليمان</a>
         </div>
 
         <!-- سوشيال ميديا -->
@@ -636,4 +636,5 @@
 
 
 </html>
+
 
