--- a/aboutUs.html
+++ b/aboutUs.html
@@ -35,8 +35,8 @@
       <nav class="nav">
         <ul class="nav-links">
           <li><a href="index.html">الرئيسية</a></li>
-          <li><a href="aboutUs.html">من نحن</a></li>
-          <li><a href="Services.html" class="active">خدماتنا</a></li>
+          <li><a href="aboutUs.html" class="active">من نحن</a></li>
+          <li><a href="Services.html" >خدماتنا</a></li>
           <li><a href="Blogs.html">المدونة</a></li>
           <li><a href="FAQ.html">الأسئلة الشائعة</a></li>
           <li><a href="ContactUs.html">اتصل بنا</a></li>
@@ -526,5 +526,6 @@
   <!-- ====== SCRIPTS ====== -->
   <script src="script.js"></script>
 </body>
+
 
 </html>
