--- a/ContactUs.html
+++ b/ContactUs.html
@@ -37,10 +37,10 @@
         <ul class="nav-links">
           <li><a href="index.html">الرئيسية</a></li>
           <li><a href="aboutUs.html">من نحن</a></li>
-          <li><a href="Services.html" class="active">خدماتنا</a></li>
+          <li><a href="Services.html" >خدماتنا</a></li>
           <li><a href="Blogs.html">المدونة</a></li>
           <li><a href="FAQ.html">الأسئلة الشائعة</a></li>
-          <li><a href="ContactUs.html">اتصل بنا</a></li>
+          <li><a href="ContactUs.html" class="active">اتصل بنا</a></li>
         </ul>
       </nav>
 
@@ -384,5 +384,6 @@
   <!-- ====== SCRIPTS ====== -->
   <script src="script.js"></script>
 </body>
+
 
 </html>
