--- a/FAQ.html
+++ b/FAQ.html
@@ -37,9 +37,9 @@
         <ul class="nav-links">
           <li><a href="index.html">الرئيسية</a></li>
           <li><a href="aboutUs.html">من نحن</a></li>
-          <li><a href="Services.html" class="active">خدماتنا</a></li>
+          <li><a href="Services.html">خدماتنا</a></li>
           <li><a href="Blogs.html">المدونة</a></li>
-          <li><a href="FAQ.html">الأسئلة الشائعة</a></li>
+          <li><a href="FAQ.html"  class="active">الأسئلة الشائعة</a></li>
           <li><a href="ContactUs.html">اتصل بنا</a></li>
         </ul>
       </nav>
@@ -462,5 +462,6 @@
   <!-- ====== SCRIPTS ====== -->
   <script src="script.js"></script>
 </body>
+
 
 </html>
