--- a/aboutUs.html
+++ b/aboutUs.html
@@ -74,7 +74,7 @@
 
         <p class="inner-hero-lead">
           شركة قانونية رائدة مقرها مدينة الرياض، تجمع بين المعرفة النظامية والخبرة العملية
-          لأكثر من عشرون عامًا في خدمة الأفراد والشركات وروّاد الأعمال وفق أعلى المعايير
+          لأكثر من عشرين عامًا في خدمة الأفراد والشركات وروّاد الأعمال وفق أعلى المعايير
           المهنية والأنظمة السعودية.
         </p>
       </div>
@@ -111,9 +111,9 @@
           المدنية، والتجارية، والعقارية، وقضايا الأحوال الشخصية والجزائية.
         </p>
 
-        <h3 class="about-subtitle">خبرة تمتد لأكثر من عشرون عامًا</h3>
+        <h3 class="about-subtitle">خبرة تمتد لأكثر من عشرين عامًا</h3>
         <p>
-          على مدى أكثر من <strong> عشرون عامًا</strong>، راكمت الشركة خبرة عملية واسعة في
+          على مدى أكثر من <strong> عشرين عامًا</strong>، راكمت الشركة خبرة عملية واسعة في
           مجالات <strong>التقاضي والتحكيم وتمثيل العملاء أمام المحاكم واللجان القضائية</strong>،
           والتعامل مع النزاعات المالية والتجارية والعقارية المعقدة. كما يتميز فريق العمل القانوني
           بمهارة عالية في قيادة عمليات التفاوض، وإبرام التسويات الودية، ومتابعة قضايا التنفيذ،
@@ -247,7 +247,7 @@
         <p class="founder-intro">
           يُعد <strong>د. سليمان بن صالح المقحم</strong> من الأسماء البارزة في الساحة القانونية
           بالمملكة العربية السعودية، حيث يمتلك خبرة عملية تمتد لأكثر من
-          <strong> عشرون عامًا</strong> في مجال المحاماة والاستشارات القانونية، ويشغل منصب
+          <strong> عشرين عامًا</strong> في مجال المحاماة والاستشارات القانونية، ويشغل منصب
           <strong>الرئيس التنفيذي لشركة د. سليمان بن صالح المقحم للمحاماة والاستشارات القانونية</strong>
           بمدينة الرياض.
         </p>
@@ -529,3 +529,4 @@
 
 
 </html>
+
