--- a/blog-article..html
+++ b/blog-article..html
@@ -101,7 +101,7 @@
         <div class="article-body">
 
           <!-- ======================= SECTION ======================= -->
-          <h2>ما هو المستشار القانوني؟ وما دوره الحقيقي؟</h2>
+          <h2>من هو المستشار القانوني؟ وما دوره الحقيقي؟</h2>
           <p>
             المستشار القانوني هو الخبير المسؤول عن توجيهك قانونيًا، وضمان أن جميع خطواتك وإجراءاتك
             تقع ضمن الإطار النظامي السعودي الصحيح. لا يقتصر دوره على الإجابة عن الأسئلة،
@@ -457,5 +457,6 @@
   <!-- ====== SCRIPTS ====== -->
   <script src="script.js"></script>
 </body>
+
 
 </html>
