--- a/Blogs.html
+++ b/Blogs.html
@@ -115,7 +115,7 @@
               </h3>
               <p class="blog-meta">نُشر في 2025/01/05 · الاستشارات القانونية</p>
               <p class="blog-excerpt">كيف تختار المستشار القانوني الأفضل؟ المعايير الذهبية…</p>
-              <a href="blog/best-legal-consultant-saudi.html" class="blog-readmore">اقرأ المزيد</a>
+              <a href="blog-article.html" class="blog-readmore">اقرأ المزيد</a>
             </div>
           </article>
 
@@ -132,7 +132,7 @@
               </h3>
               <p class="blog-meta">نُشر في 2025/01/10 · القضايا التجارية</p>
               <p class="blog-excerpt">دليل لاختيار أفضل مكتب محاماة في الرياض.</p>
-              <a href="blog/best-law-firm-riyadh.html" class="blog-readmore">اقرأ المزيد</a>
+              <a href="blog-article-2.html" class="blog-readmore">اقرأ المزيد</a>
             </div>
           </article>
 
@@ -288,3 +288,4 @@
 
 
 </html>
+
